--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,33 @@ body {
     text-wrap: balance;
   }
 }
+
+h1{
+  text-align: center;
+  font-size: 20px;
+  padding-top: 30px;
+}
+p{
+  text-align: center;
+  font-size: 16px;
+  padding-top: 30px;
+}
+.menu{
+  display: flex;
+  gap: 20px;
+  padding: 5px 10px;
+  
+  width: 100vw;
+}
+header{
+  display: flex;
+  background: #242424;
+  width: 100vw;
+}
+.logo{
+  margin: auto 20px;
+  
+}
+.active{
+  color: aquamarine;
+}
