--- a/app/globals.css
+++ b/app/globals.css
@@ -47,12 +47,12 @@ p{
   gap: 20px;
   padding: 5px 10px;
   
-  width: 100vw;
+  width: 100%;
 }
 header{
   display: flex;
   background: #242424;
-  width: 100vw;
+  width: 100%;
 }
 .logo{
   margin: auto 20px;
@@ -60,4 +60,13 @@ header{
 }
 .active{
   color: aquamarine;
+}
+.searchButton{
+  background: #418a8f;
+  padding: 0 5px;
+  border-radius: 0 5px 5px 0;
+}
+input{
+  color: #242424;
+  padding: 0 4px;
 }
